--- a/src/_includes/layout/landing.njk
+++ b/src/_includes/layout/landing.njk
@@ -24,7 +24,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet">
     <style>
 		.hero {
-      background: linear-gradient(to top, transparent, #1a1a1a38 70%), url(https://cdn.pixabay.com/photo/2016/10/11/21/43/geometric-1732847_1280.jpg) no-repeat center center;
+      background: linear-gradient(to top, transparent, #1a1a1a38 70%), url(https://cdn.pixabay.com/photo/2020/06/04/11/10/bulb-5258341_1280.jpg) no-repeat center center;
       background-size: cover;
 		}
 	  </style>
@@ -43,7 +43,7 @@
         </div>
         <div id="hero-visual" class="w-full md:w-2/5 py-6 text-center">
           <span class="text-lg text-white">
-            <img class="w-2 md:w-2/5 z-50" src="{{ "/images/logo.png" | url }}">
+           <img class="w-2 md:w-2/5 z-50" src="{{ "/images/flag.png" | url }}">
           </span>
         </div>
       </div>
