--- a/src/_includes/layout/redirect.njk
+++ b/src/_includes/layout/redirect.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,7 +25,10 @@ var locale =
 
 let redirUrl = "{{ '/' | url }}" + locale + "/";
 console.log("Redirecting to :" + redirUrl);
-window.location.replace(redirUrl);
+// window.location.replace(redirUrl);
+
+// Changed it to "es" because for now I want it to be fully Spanish first
+window.location.replace("es")
 </script>
 
 </body>
